update index file for icon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 
       <link rel="stylesheet" href="css/styles.css">
+  
+      <link rel="icon" href="images/tindog.ico">
 
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link
